# actions-warden

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: sources.md
src/actions_warden/: __init__.py  cli.py  scanner.py
tests/: test_cli.py  test_scanner.py
